software-center (3.1.14) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * utils/submit_review.py:
    - fix visual glitch with the gwibber combo on long usernames
      (thanks to davmor2 for reporting)
  * debian/control:
    - make python-piston-mini-client a hard depenency again

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk:
    - don't eat description characters (LP: #708684)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 28 Jan 2011 09:54:16 +0100

software-center (3.1.13) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix crash in _on_transaction_started (LP: #708974)
  * softwarecenter/view/widgets/mkit.py:
    - handle case where the pango layout has no attributes,
      fixes broken carousel paging dots (LP: #708919)
  
  [ Michael Vogt ]
  * debian/control:
    - make python-piston-mini-client a recommends until the MIR for
      it is approved (this unblocks CD builds)
    - cleanup old conflict against software-store
  * softwarecenter/view/catview_gtk.py:
    - fix spacing for the recommends message

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 28 Jan 2011 09:41:43 +0100

software-center (3.1.12) natty; urgency=low

  * merged lp:~mvo/software-center/trunk-reviews, this adds ratings
    and reviews

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Jan 2011 20:48:06 +0100

software-center (3.1.11) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/widgets/spinner.py:
    - modify to allow updating spinner label text on the fly
  * software-center,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/softwarepane.py:
    - defer loading the categories pane in the main view and display
      a spinner while it's loading, provides further startup time
      improvement
  * test/test_gui_buy_something.py:
    - fix test case
  * softwarecenter/app.py,
    softwarecenter/view/historypane.py: